improve responsive and last CSS grid example

--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@
                 <ul>
                     <li><a href="https://thoughtbot.com/blog/concise-media-queries-with-css-grid"> Concise Media Queries
                             with CSS Grid</a></li>
-                    <li><a href="https://gridbyexample.com/examples/example13/">Redefining Grid Areas with Media
-                            Queries</a>
+                    <li><a href="https://gridbyexample.com/examples/">Grid by Example - Usage examples of CSS
+                            Grid Layout</a></li>
                     </li>
                     <li><a href="https://css-tricks.com/look-ma-no-media-queries-responsive-layouts-using-css-grid/">
                             Look
