improve accessibility on color theme buttons

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <main>
         <header>
             <div id="container-color-theme">
-                Themes :
-                <button type="button" id="btn-orange-theme" 
+                Theme :
+                <button type="button" id="btn-orange-theme" data-color="32"
                     class="btn-color-theme" onclick="changeColorTheme(32)">
-                    Select orange theme
+                    <span class="visually-hidden">Select orange theme</span>
                 </button>
-                <button type="button" id="btn-green-theme" 
+                <button type="button" id="btn-green-theme" data-color="132"
                     class="btn-color-theme" onclick="changeColorTheme(132)">
-                    Select green theme
+                    <span class="visually-hidden">Select green theme</span>
                 </button>
             </div>
             <div id="container-light-theme">
