--- a/index.html
+++ b/index.html
@@ -25,15 +25,34 @@
     <main>
         <header>
             <div id="container-color-theme">
-                Theme :
-                <button type="button" id="btn-orange-theme" data-color="32"
-                    class="btn-color-theme" onclick="changeColorTheme(32)">
-                    <span class="visually-hidden">Select orange theme</span>
-                </button>
-                <button type="button" id="btn-green-theme" data-color="132"
-                    class="btn-color-theme" onclick="changeColorTheme(132)">
-                    <span class="visually-hidden">Select green theme</span>
-                </button>
+                <div id="container-color-buttons">
+                    <label>Themes :</label>
+                    <button type="button" id="btn-orange-theme" data-color="32" class="btn-color-theme"
+                        onclick="changeColorTheme(32)" title="Select orange theme">
+                        <span class="visually-hidden">Select orange theme</span>
+                    </button>
+                    <button type="button" id="btn-green-theme" data-color="132" class="btn-color-theme"
+                        onclick="changeColorTheme(132)" title="Select green theme">
+                        <span class="visually-hidden">Select green theme</span>
+                    </button>
+                    <button type="button" id="btn-user-theme" class="btn-color-theme"
+                        title="Select your own color theme" onclick="displayUserTheme()">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus"
+                            class="svg-inline--fa fa-plus fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
+                            </path>
+                        </svg>
+                        <span class="visually-hidden">Select your own color</span>
+                    </button>
+                </div>
+                <div id="container-user-theme" class="d-none">
+                    <div class="slider">
+                        <label for="shade">Pick a color :</label>
+                        <input type="range" name="shade" id="shade" min="0" max="360">
+                    </div>
+                </div>
             </div>
             <div id="container-light-theme">
                 <button id="btn-theme" type="button" aria-pressed="false" aria-label="Activate dark mode"
