--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                     </svg>
                     <p>By default, variables are inherited by the children of the element that declared them.</p>
                 </div>
-                
+
                 <pre>
 <span class="comment">/* white container */</span>
 <span class="selector">#grid-container</span> {
@@ -549,19 +549,19 @@
 }
             </pre>
 
-            <h4 class="section-subtitle-example section-subtitle-example-mt">Inline style and variables</h4>
-            <div class="info-message">
-                <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
-                    class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 352 512">
-                    <path fill="currentColor"
-                        d="M176 80c-52.94 0-96 43.06-96 96 0 8.84 7.16 16 16 16s16-7.16 16-16c0-35.3 28.72-64 64-64 8.84 0 16-7.16 16-16s-7.16-16-16-16zM96.06 459.17c0 3.15.93 6.22 2.68 8.84l24.51 36.84c2.97 4.46 7.97 7.14 13.32 7.14h78.85c5.36 0 10.36-2.68 13.32-7.14l24.51-36.84c1.74-2.62 2.67-5.7 2.68-8.84l.05-43.18H96.02l.04 43.18zM176 0C73.72 0 0 82.97 0 176c0 44.37 16.45 84.85 43.56 115.78 16.64 18.99 42.74 58.8 52.42 92.16v.06h48v-.12c-.01-4.77-.72-9.51-2.15-14.07-5.59-17.81-22.82-64.77-62.17-109.67-20.54-23.43-31.52-53.15-31.61-84.14-.2-73.64 59.67-128 127.95-128 70.58 0 128 57.42 128 128 0 30.97-11.24 60.85-31.65 84.14-39.11 44.61-56.42 91.47-62.1 109.46a47.507 47.507 0 0 0-2.22 14.3v.1h48v-.05c9.68-33.37 35.78-73.18 52.42-92.16C335.55 260.85 352 220.37 352 176 352 78.8 273.2 0 176 0z">
-                    </path>
-                </svg>
-                <p>We can also directly declare variables in HTML, with the inline style. Awesome, right ?</p>
-            </div>
+                <h4 class="section-subtitle-example section-subtitle-example-mt">Inline style and variables</h4>
+                <div class="info-message">
+                    <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
+                        class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 352 512">
+                        <path fill="currentColor"
+                            d="M176 80c-52.94 0-96 43.06-96 96 0 8.84 7.16 16 16 16s16-7.16 16-16c0-35.3 28.72-64 64-64 8.84 0 16-7.16 16-16s-7.16-16-16-16zM96.06 459.17c0 3.15.93 6.22 2.68 8.84l24.51 36.84c2.97 4.46 7.97 7.14 13.32 7.14h78.85c5.36 0 10.36-2.68 13.32-7.14l24.51-36.84c1.74-2.62 2.67-5.7 2.68-8.84l.05-43.18H96.02l.04 43.18zM176 0C73.72 0 0 82.97 0 176c0 44.37 16.45 84.85 43.56 115.78 16.64 18.99 42.74 58.8 52.42 92.16v.06h48v-.12c-.01-4.77-.72-9.51-2.15-14.07-5.59-17.81-22.82-64.77-62.17-109.67-20.54-23.43-31.52-53.15-31.61-84.14-.2-73.64 59.67-128 127.95-128 70.58 0 128 57.42 128 128 0 30.97-11.24 60.85-31.65 84.14-39.11 44.61-56.42 91.47-62.1 109.46a47.507 47.507 0 0 0-2.22 14.3v.1h48v-.05c9.68-33.37 35.78-73.18 52.42-92.16C335.55 260.85 352 220.37 352 176 352 78.8 273.2 0 176 0z">
+                        </path>
+                    </svg>
+                    <p>We can also directly declare variables in HTML, with the inline style. Awesome, right ?</p>
+                </div>
 
-            <pre>
+                <pre>
 <span class="comment">/* white container */</span>
 <span class="selector">#grid-container</span> {
     <span class="property">display</span>: <span class="value">grid</span>;
@@ -610,7 +610,207 @@
         </section>
 
         <section id="section-navigation" class="section section-odd">
-            <h2 class="section-title">Navigation</h2>
+            <div class="section-container">
+                <h2 class="section-title">Navigation</h2>
+                <div class="section-description">
+                    <p>
+                        Scroll, interactions, accessibility : modern CSS can also enhance user navigation.
+                    </p>
+                </div>
+
+                <!-- SUBSECTION SCROLL-SNAP -->
+                <h3 class="section-subtitle">Scroll snap</h3>
+                <p>CSS Scroll snap give us the power to control how elements of a container
+                    will respond to scroll. It's particulary useful with touch devices,
+                    to create a seamless scrolling experience with items that can be swiped.
+                </p>
+
+                <!-- First example Scroll snap -->
+                <h4 class="section-subtitle-example">Vertical scroll-snap</h4>
+
+                <div class="info-message">
+                    <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
+                        class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 352 512">
+                        <path fill="currentColor"
+                            d="M176 80c-52.94 0-96 43.06-96 96 0 8.84 7.16 16 16 16s16-7.16 16-16c0-35.3 28.72-64 64-64 8.84 0 16-7.16 16-16s-7.16-16-16-16zM96.06 459.17c0 3.15.93 6.22 2.68 8.84l24.51 36.84c2.97 4.46 7.97 7.14 13.32 7.14h78.85c5.36 0 10.36-2.68 13.32-7.14l24.51-36.84c1.74-2.62 2.67-5.7 2.68-8.84l.05-43.18H96.02l.04 43.18zM176 0C73.72 0 0 82.97 0 176c0 44.37 16.45 84.85 43.56 115.78 16.64 18.99 42.74 58.8 52.42 92.16v.06h48v-.12c-.01-4.77-.72-9.51-2.15-14.07-5.59-17.81-22.82-64.77-62.17-109.67-20.54-23.43-31.52-53.15-31.61-84.14-.2-73.64 59.67-128 127.95-128 70.58 0 128 57.42 128 128 0 30.97-11.24 60.85-31.65 84.14-39.11 44.61-56.42 91.47-62.1 109.46a47.507 47.507 0 0 0-2.22 14.3v.1h48v-.05c9.68-33.37 35.78-73.18 52.42-92.16C335.55 260.85 352 220.37 352 176 352 78.8 273.2 0 176 0z">
+                        </path>
+                    </svg>
+                    <p>Scroll in the container box to see how the scrolling stops perfectly with one item fixed at the
+                        top of the container !</p>
+                </div>
+
+                <div class="example-illustration">
+                    <div class="container-scroll-y">
+                        <ul class="scroller">
+                            <li class="scroll-area">Item 1</li>
+                            <li class="scroll-area">Item 2</li>
+                            <li class="scroll-area">Item 3</li>
+                            <li class="scroll-area">Item 4</li>
+                            <li class="scroll-area">Item 5</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <pre>
+<span class="comment">/* big purple box */</span>
+<span class="selector">.parent</span> {
+    <span class="property">font-size</span>: <span class="number">20</span><span class="unit">px</span>;
+}
+
+<span class="comment">/* medium pink box */</span>
+<span class="selector">.child-one</span> {
+    <span class="comment">/* the child hasn't declared a font-size, 
+        so 1em = parent's font-size */</span>
+    <span class="property">width</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 20px = 40px */</span>
+    <span class="property">height</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 20px = 40px */</span>
+}
+
+<span class="comment">/* small green box */</span>
+<span class="selector">.child-two</span> {
+    <span class="property">font-size</span>: <span class="number">0.5</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 0.5 x 20px = 10px */</span>
+    <span class="comment">/* the child has declared a font-size, 
+        so 1em = element's font-size */</span>
+    <span class="property">width</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 10px = 20px */</span>
+    <span class="property">height</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 10px = 20px */</span>
+}
+
+.example-shape-outside-element {
+    width: 8rem;
+    aspect-ratio: 1;
+    background-color: var(--illustration-pink, --pre-pink);
+    float: left;
+    margin-right: 2rem;
+}
+
+/* circle shape */
+.example-shape-outside-element:first-child {
+    border-radius: 50%;
+    shape-outside: circle(50%);
+}
+
+/* diamond shape */
+.example-shape-outside-element:nth-of-type(2) {
+    shape-outside: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+    /* the property only change the relationship of adjacent elements,
+    not the geometry of the element itself */
+    /* to change the geometry of the element we use the clip-path property,
+    with the same values */
+    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+}
+
+/* ellipse shape */
+.example-shape-outside-element:nth-of-type(3) {
+    shape-outside: ellipse(35% 50% at 50% 50%);
+    clip-path: ellipse(35% 50% at 50% 50%);
+}
+                </pre>
+
+                <!-- Second example Scroll snap -->
+                <h4 class="section-subtitle-example">Horizontal scroll-snap</h4>
+
+                <div class="info-message">
+                    <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="lightbulb"
+                        class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 352 512">
+                        <path fill="currentColor"
+                            d="M176 80c-52.94 0-96 43.06-96 96 0 8.84 7.16 16 16 16s16-7.16 16-16c0-35.3 28.72-64 64-64 8.84 0 16-7.16 16-16s-7.16-16-16-16zM96.06 459.17c0 3.15.93 6.22 2.68 8.84l24.51 36.84c2.97 4.46 7.97 7.14 13.32 7.14h78.85c5.36 0 10.36-2.68 13.32-7.14l24.51-36.84c1.74-2.62 2.67-5.7 2.68-8.84l.05-43.18H96.02l.04 43.18zM176 0C73.72 0 0 82.97 0 176c0 44.37 16.45 84.85 43.56 115.78 16.64 18.99 42.74 58.8 52.42 92.16v.06h48v-.12c-.01-4.77-.72-9.51-2.15-14.07-5.59-17.81-22.82-64.77-62.17-109.67-20.54-23.43-31.52-53.15-31.61-84.14-.2-73.64 59.67-128 127.95-128 70.58 0 128 57.42 128 128 0 30.97-11.24 60.85-31.65 84.14-39.11 44.61-56.42 91.47-62.1 109.46a47.507 47.507 0 0 0-2.22 14.3v.1h48v-.05c9.68-33.37 35.78-73.18 52.42-92.16C335.55 260.85 352 220.37 352 176 352 78.8 273.2 0 176 0z">
+                        </path>
+                    </svg>
+                    <p>Swipe the items in the container box to see how the scrolling stops perfectly with one
+                        item fixed at the center of the container !</p>
+                </div>
+
+                <div class="example-illustration">
+                    <ul class="container-scroll-x">
+                        <li class="scroll-area">Item 1</li>
+                        <li class="scroll-area">Item 2</li>
+                        <li class="scroll-area">Item 3</li>
+                        <li class="scroll-area">Item 4</li>
+                        <li class="scroll-area">Item 5</li>
+                    </ul>
+                </div>
+
+                <pre>
+<span class="comment">/* big purple box */</span>
+<span class="selector">.parent</span> {
+    <span class="property">font-size</span>: <span class="number">20</span><span class="unit">px</span>;
+}
+
+<span class="comment">/* medium pink box */</span>
+<span class="selector">.child-one</span> {
+    <span class="comment">/* the child hasn't declared a font-size, 
+        so 1em = parent's font-size */</span>
+    <span class="property">width</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 20px = 40px */</span>
+    <span class="property">height</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 20px = 40px */</span>
+}
+
+<span class="comment">/* small green box */</span>
+<span class="selector">.child-two</span> {
+    <span class="property">font-size</span>: <span class="number">0.5</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 0.5 x 20px = 10px */</span>
+    <span class="comment">/* the child has declared a font-size, 
+        so 1em = element's font-size */</span>
+    <span class="property">width</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 10px = 20px */</span>
+    <span class="property">height</span>: <span class="number">2</span><span class="unit">em</span>; 
+    <span class="comment">/* ↑ 2 x 10px = 20px */</span>
+}
+
+.example-shape-outside-element {
+    width: 8rem;
+    aspect-ratio: 1;
+    background-color: var(--illustration-pink, --pre-pink);
+    float: left;
+    margin-right: 2rem;
+}
+
+/* circle shape */
+.example-shape-outside-element:first-child {
+    border-radius: 50%;
+    shape-outside: circle(50%);
+}
+
+/* diamond shape */
+.example-shape-outside-element:nth-of-type(2) {
+    shape-outside: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+    /* the property only change the relationship of adjacent elements,
+    not the geometry of the element itself */
+    /* to change the geometry of the element we use the clip-path property,
+    with the same values */
+    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+}
+
+/* ellipse shape */
+.example-shape-outside-element:nth-of-type(3) {
+    shape-outside: ellipse(35% 50% at 50% 50%);
+    clip-path: ellipse(35% 50% at 50% 50%);
+}
+                </pre>
+
+                <!-- SUBSECTION RESOURCES -->
+                <h3 class="section-subtitle section-resources">Scroll-snap : Further resources</h3>
+                <ul>
+                    <li><a title="Practical CSS Scroll Snapping | CSS-Tricks"
+                            href="https://css-tricks.com/practical-css-scroll-snapping/">Practical CSS Scroll Snapping |
+                            CSS-Tricks</a></li>
+                    <li><a title="CSS Scroll Snap - Ahmad Shadeed"
+                            href="https://ishadeed.com/article/css-scroll-snap/">CSS Scroll Snap - Ahmad Shadeed</a>
+                    </li>
+                    <li><a title="Scroll Snapping Examples" href="https://webkit.org/demos/scroll-snap/">Scroll Snapping
+                            Examples</a></li>
+                    </li>
+                </ul>
+
+
+            </div>
         </section>
 
         <!-- SECTION LAYOUT -->
@@ -1175,6 +1375,18 @@
     filter: drop-shadow(1rem -0.25rem 0.5rem var(--shadow-color));
 }
                 </pre>
+
+                <!-- SUBSECTION RESOURCES -->
+                <h3 class="section-subtitle section-resources">Drop-shadow : Further resources</h3>
+                <ul>
+                    <li><a href="https://css-irl.info/drop-shadow-the-underrated-css-filter/">
+                            CSS { In Real Life } | Drop-Shadow: The Underrated CSS Filter
+                        </a></li>
+                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter-function/drop-shadow()">
+                            drop-shadow() - CSS: Cascading Style Sheets | MDN
+                        </a></li>
+                    </li>
+                </ul>
 
             </div>
         </section>
